<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.example.malte.ohkey.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tv1"
        android:layout_marginTop="20dp"
        android:text="f(x)=x²+y"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etPara"
        android:hint="@string/parameter"
        android:layout_below="@+id/quadSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etPot"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/etPara"
        android:layout_alignLeft="@+id/etPara"
        android:layout_alignStart="@+id/etPara"
        android:hint="@string/potenz" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etyA"
        android:layout_marginTop="30dp"
        android:hint="@string/yAchse"
        android:layout_below="@+id/etPot"
        android:layout_alignLeft="@+id/etPot"
        android:layout_alignStart="@+id/etPot" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/bt1"
        android:layout_below="@+id/etyA"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="bt1Click" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weiter"
        android:id="@+id/bt1weiter"
        android:layout_below="@+id/bt1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="bt1weiterClick" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quadFunk"
        android:id="@+id/quadSwitch"
        android:layout_below="@+id/tv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:checked="true" />

</RelativeLayout>
